--- a/index.html
+++ b/index.html
@@ -12,14 +12,9 @@
       <h1>Akshay is here!</h1>
     </div>
 
-    <script
-      crossorigin
-      src="https://unpkg.com/react@18/umd/react.development.js"
-    ></script>
-    <script
-      crossorigin
-      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-    ></script>
-    <script src="./App.js"></script>
+    <!-- In the below script tag module is used because import statements are not pure js. 
+    Therefore we need to make its type as module so as to make import statements works -->
+
+    <script type="module" src="./src/App.js"></script>  
   </body>
 </html>
